Add english translations

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -908,5 +908,42 @@
   "wallet.transferFunds.dialog2.label.total": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
-  "wallet.transferFunds.dialog2.title": "Transfer funds"
+  "wallet.transferFunds.dialog2.title": "Transfer funds",
+  "wallet.transferFunds.dialog2.sourceWalletAmount.label": "{sourceWalletName} amount",
+  "wallet.transferFunds.dialog2.total.label": "Total",
+  "voting.info.heading": "Register to vote",
+  "voting.info.description": "To start yo will need to have the <span>Catalyst Voting App</span> ready on your smart phone! To register to vote you will need a <span>PIN code</span> and a <span>QR code</span> that you will generate here within <span>Daedalus</span>. Before you start",
+  "voting.info.buttonLabel": "Register to vote",
+  "voting.votingAdd.steps.step.1.label": "Wallet",
+  "voting.votingAdd.steps.step.2.label": "PIN code",
+  "voting.votingAdd.steps.step.3.label": "Deposit",
+  "voting.votingAdd.steps.step.4.label": "QR code",
+  "voting.votingAdd.heading": "Register to vote",
+  "voting.votingAdd.subTitle": "Step {step} of {stepCount}",
+  "voting.votingAdd.chooseWallet.step.description": "For  <span>fund 2</span> voting you will be able to use only one wallet to register.",
+  "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "Select wallet",
+  "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA which is required for voting to be available. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click continue.",
+  "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains only rewards balances so it cannot be voting.",
+  "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "This wallet can’t be used for voting while it’s being synced.",
+  "voting.votingAdd.chooseWallet.step.continueButtonLabel": "Continue",
+  "voting.votingAdd.EnterPinCode.step.description": "This voting Pin Code will be used to access the Catalyst Voting App and decrypt your QR code. Do not use the same pin code as the one you use for your phone.",
+  "voting.votingAdd.EnterPinCode.step.reminder": "Dont forget it! You will need it in order to access the voting app and be able to vote.",
+  "voting.votingAdd.EnterPinCode.step.enterPinCodeLabel": "Enter PIN code",
+  "voting.votingAdd.EnterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
+  "voting.votingAdd.EnterPinCode.step.continueButtonLabel": "Continue",
+  "voting.votingAdd.EnterPinCode.step.errors.invalidPinCode": "Invalid pin code",
+  "voting.votingAdd.EnterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
+  "voting.votingAdd.Deposit.step.description": "By confirming this action, you are making a tx to yourself, and generating meta-data that validates your voting power.",
+  "voting.votingAdd.Deposit.step.continueButtonLabel": "Deposit funds and generate QR code",
+  "voting.votingAdd.Deposit.step.feesLabel": "Fees",
+  "voting.votingAdd.Deposit.step.spendingPasswordPlaceholder": "Spending password",
+  "voting.votingAdd.Deposit.step.spendingPasswordLabel": "Spending password",
+  "voting.votingAdd.Deposit.step.calculatingFees": "Calculating fees",
+  "voting.votingAdd.QrCode.step.description": "Waiting for transaction to be confirmed...",
+  "voting.votingAdd.QrCode.step.continueButtonLabel": "Close",
+  "voting.votingAdd.QrCode.step.loadingMessage": "Waiting for transaction to be confirmed...",
+  "voting.votingAdd.QrCode.step.qrCodeTitle": "Please complete your registration now",
+  "voting.votingAdd.QrCode.step.qrCodeDescription": "Scan the QR code using the Catalyst Voting app.",
+  "voting.votingAdd.QrCode.step.readCheckboxLabel": "I undestand that this is last time I see this QR code before closing. Next time I will need to generate new one and pay feed again"
 }
