[DDW-197] Add / Improve hardware wallet connect feature

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -563,6 +563,8 @@
   "wallet.add.dialog.restore.withoutCertificate.description": "Restore wallet from backup",
   "wallet.add.dialog.restoreNotificationMessage": "Wallet restoration is currently in progress.<br>Until it completes, it is not possible to restore or import new wallets.",
   "wallet.add.dialog.title.label": "Add wallet",
+  "wallet.add.dialog.connect.label": "Connect",
+  "wallet.add.dialog.connect.description": "Connect hardware wallet",
   "wallet.amountInput.calculatingFeesLabel": "Calculating fees",
   "wallet.amountInput.feesLabel": "+ {amount} of fees",
   "wallet.backup.privacy.warning.dialog..button.labelContinue": "Continue",
@@ -594,6 +596,9 @@
   "wallet.byron.notification.moveFundsDescription.line2": "You can create a {moveFundsLink} or move funds to one of your existing wallets.",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
+  "wallet.connect.hardwareWalletInstructions": "Follow instructions to access your wallet",
+  "wallet.connect.dialog.title": "Connect hardware wallet",
+  "wallet.connect.dialog.button.close": "Cancel",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
   "wallet.create.dialog.hashImageStep": "Hash & Image",
@@ -620,7 +625,6 @@
   "wallet.hardware.deviceStatus.verifying_transaction": "Verify the transaction on your device in order to sign it",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction verification and signing failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction verified and signed",
-  "wallet.hardware.hardwareWalletInstructions": "Follow instructions to access your wallet",
   "wallet.hardware.hardwareWalletTitle": "Hardware wallet",
   "wallet.hardware.ledgerWalletTitle": "Ledger wallet",
   "wallet.hardware.trezorWalletTitle": "Trezor wallet",
