--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -594,6 +594,7 @@
   "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
+  "wallet.connect.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
   "wallet.create.dialog.hashImageStep": "!!!Hash & Image",
@@ -620,7 +621,6 @@
   "wallet.hardware.deviceStatus.verifying_transaction": "!!!Verify the transaction on your device in order to sign it",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "!!!Transaction verification and signing failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "!!!Transaction verified and signed",
-  "wallet.hardware.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
   "wallet.hardware.hardwareWalletTitle": "!!!Hardware wallet",
   "wallet.hardware.ledgerWalletTitle": "!!!Ledger wallet",
   "wallet.hardware.trezorWalletTitle": "!!!Trezor wallet",
